# espresso

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg
src/: digitalThermostat.py  espressomanager.py  main.py  max31865.py  multiplexerCD74.py  output.py
src/api/: channels.yml
src/app/: main.py
src/app/Widgets/: ConsoleWidget.py  ControlWidgets.py  SerialWidget.py
src/devices/: RGBLED.py  multiplexerCD74.py
src/embedded/: iocontroller.py  machineio.py  main.py  pid.py  run.py  sensor.py  signal.py  signaloutput.py  util.py
src/embedded/__archive__/: boilercontroller.py  flag.py
src/embedded/devices/: MAX31865.py  RGBLED.py  ST7735.py  multiplexerCD74.py
src/embedded/scripts/: TEST_BOILER.py  TEST_CD74.py  TEST_FILL.py  TEST_HT.py  TEST_INTEGRATED.py  TEST_MAX31865_LIB.py  TEST_MAX31865_SPI.py  TEST_POLL.py  TEST_PT.py  TEST_PUMP.py  TEST_RGB.py  TEST_SHOT.py  TEST_ST7735.py  TEST_VALVES.py
src/simulator/: model.py  simulator.py  virtualcontrolpanel.py  virtualinstrumentpanel.py  virtualiocontroller.py  virtualsignal.py
src/utils/: __init__.py
