[tool.poetry]
name = "espresso"
version = "0.1.0"
description = ""
authors = ["Matt Vredevoogd <flyinv1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt6 = "^6.3.0"
numpy = "^1.22.3"
dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
